fixed padding and spacing on logo slider

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -5,6 +5,7 @@
   --header-offset: -90px;
   --small-screen-height: 480px;
   --small-screen-width: 600px;
+  --very-small-screen-width: 400px;
 
   --max-content-width: 1440px;
   --two-column-width: 1024px;
@@ -21,6 +22,7 @@
   --box-shadow: 0px 4px 10px 0px rgba(51,51,51,0.2);
 }
 
+$very-small-screen-width: 400px;
 $small-screen-width: 600px;
 $tablet-screen-width: 768px;
 $medium-screen-width: 1024px;
