--- a/src/sass/components/_vendor-logos.scss
+++ b/src/sass/components/_vendor-logos.scss
@@ -1,28 +1,3 @@
-/*
-.vendor-list {
-  ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-
-    li {
-      flex: 0 0 260px;
-      height: 100%;
-
-
-      a {
-        padding: 20px 30px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-      }
-    }
-  }
-}
-*/
 .vendor-list {
   --logo-padding: 20px;
   --list-height: 160px;
@@ -66,6 +41,7 @@
   justify-content: center;
   align-items: center;
   width: var(--list-width);
+  margin: 0;
 
   li {
     width: 200px;
